--- a/index.html
+++ b/index.html
@@ -1893,8 +1893,8 @@ var pJS = function (e, a) {
                <div class="sidebar" id="sidebar">
                     <a class="active" href="#" target="_blank">Github</a>
                     <a class="active" href="#" target="_blank">Instagram</a>
-                    <a class="active" href="#" target="_blank">YouTube</a>
-                    <a class="active" href="https://telegram.dog/Lvxky" target="_blank">Telegram</a>
+                    <a class="active" href="https://www.instagram.com/shiv4m7?igsh=MW01YzF1aXRxazV0MA==" target="_blank">YouTube</a>
+                    <a class="active" href="https://t.me/carderslegacy" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
                     <label for="check" class="checkbtn" id="chkbtn">
