--- a/index.html
+++ b/index.html
@@ -1892,8 +1892,8 @@ var pJS = function (e, a) {
           <div class="card">
                <div class="sidebar" id="sidebar">
                     <a class="active" href="#" target="_blank">Github</a>
-                    <a class="active" href="#" target="_blank">Instagram</a>
-                    <a class="active" href="https://www.instagram.com/shiv4m7?igsh=MW01YzF1aXRxazV0MA==" target="_blank">YouTube</a>
+                    <a class="active" href="https://www.instagram.com/shiv4m7?igsh=MW01YzF1aXRxazV0MA==" target="_blank">Instagram</a>
+                    <a class="active" href="#" target="_blank">YouTube</a>
                     <a class="active" href="https://t.me/carderslegacy" target="_blank">Telegram</a>
                </div>
                <div class="header" onclick="toggle()">
@@ -1920,7 +1920,7 @@ var pJS = function (e, a) {
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: IDK ✦</p>
+                              <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: REVA PU CLG ✦</p>
                               <p class="text">~ Dᴇᴠ ~</p>
                               <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
                          </div>
@@ -1931,7 +1931,7 @@ var pJS = function (e, a) {
                               <a href="#" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
-                              <a href="https://telegram.dog/Lvxky" class="icon">
+                              <a href="https://t.me/carderslegacy" class="icon">
                                    <i class="fa-brands fa-telegram"></i>
                               </a>
                               <a href="#" class="icon">
@@ -1943,7 +1943,7 @@ var pJS = function (e, a) {
                                    <a href="#" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
-                                   <a href="https://telegram.dog/Lvxky" class="share">Contact</a>
+                                   <a href="https://t.me/carderslegacy" class="share">Contact</a>
                               </div>
                          </div>
                     </div>
