--- a/index.html
+++ b/index.html
@@ -1912,7 +1912,7 @@ var pJS = function (e, a) {
                               </div>
                          </div>
                          <h3 class="name"></h3>
-                         <h3 class="sub-name">• 𝗟𝗨𝗖𝗞𝗬 𝗫𝗗 •</h3>
+                         <h3 class="sub-name"> នʜɪᴠᴀᴍ 𓆩⃟👑𓆪 •</h3>
                     </div>
                </div>
 
