--- a/index.html
+++ b/index.html
@@ -1891,7 +1891,7 @@ var pJS = function (e, a) {
           <input type="checkbox" name="" id="check">
           <div class="card">
                <div class="sidebar" id="sidebar">
-                    <a class="active" href="#" target="_blank">Github</a>
+                    <a class="active" href="https://github.com/shiv4m7" target="_blank">Github</a>
                     <a class="active" href="https://www.instagram.com/shiv4m7?igsh=MW01YzF1aXRxazV0MA==" target="_blank">Instagram</a>
                     <a class="active" href="#" target="_blank">YouTube</a>
                     <a class="active" href="https://t.me/carderslegacy" target="_blank">Telegram</a>
@@ -1902,7 +1902,7 @@ var pJS = function (e, a) {
                               <div class="center"></div>
                          </div>
                     </label>
-                    <a href="mailto:#" class="mail">
+                    <a href="mailto: shvm187@gmail.com" class="mail">
                          <i class="fa-regular fa-envelope"></i>
                     </a>
                     <div class="main">
