--- a/index.html
+++ b/index.html
@@ -1925,10 +1925,10 @@ var pJS = function (e, a) {
                               <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
                          </div>
                          <div class="icons-container">
-                              <a href="#" class="icon">
+                              <a href="https://github.com/shiv4m7" class="icon">
                                    <i class="fa-brands fa-github"></i>
                               </a>
-                              <a href="#" class="icon">
+                              <a href="https://www.instagram.com/shiv4m7?igsh=MW01YzF1aXRxazV0MA==" class="icon">
                                    <i class="fa-brands fa-instagram"></i>
                               </a>
                               <a href="https://t.me/carderslegacy" class="icon">
@@ -1940,7 +1940,7 @@ var pJS = function (e, a) {
                          </div>
                          <div class="buttons-wrap">
                               <div class="follow-wrap">
-                                   <a href="#" class="follow">Follow</a>
+                                   <a href="https://www.instagram.com/shiv4m7?igsh=MW01YzF1aXRxazV0MA==" class="follow">Follow</a>
                               </div>
                               <div class="share-wrap">
                                    <a href="https://t.me/carderslegacy" class="share">Contact</a>
