--- a/index.html
+++ b/index.html
@@ -1920,7 +1920,7 @@ var pJS = function (e, a) {
                     <div class="left">
                          <div class="about-container">
                               <h3 class="title">About</h3>
-                              <p class="text">✦ Cʟᴧss: XI | Sᴄʜᴏᴏʟ: REVA PU CLG ✦</p>
+                              <p class="text">✦ Cʟᴧss: XI |  REVA PU CLG ✦</p>
                               <p class="text">~ Dᴇᴠ ~</p>
                               <p class="text">• Pʏᴛʜᴏɴ | JᴧᴠᴧSᴄʀɪᴘᴛ | Hᴛᴍʟ | Css •</p>
                          </div>
